# Autumn2021-Computer-Graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/scene/: scene.json  scene2.json  scene_gen.py
assets/scene/material/: rustediron.material.json  rustediron.phong.material.json
include/: application.h  camera.h  cg_common.h  cg_fwd.h  cgpa_common.hpp  framebuffer.h  geometry.h  geometry.hpp  light.h  lighting.h  material.h  material.hpp  mesh.h  obj_loader.h  object3d.h  renderer.h  rt.h  scene.h  scene.hpp  shader.h  simcl.h  texture.h
include/helper/: atlas_creator.h  axis_helper.h  cubemap_renderer.h
lib/: application.cpp
lib/helper/: axis_helper.cpp
lib/importer/: obj_loader.cpp
lib/mesh/: geometry.cpp  material.cpp  mesh.cpp
lib/raytracing/: rt.cpp  simcl.cpp
lib/scene3d/: object3d.cpp  renderer.cpp  scene.cpp
lib/shader/: basic.fsh  basic.vsh  phong.fsh  phong.vsh  shader.cpp
lib/shaders/: bsdf.fsh  bxdf.h  phong.fsh  phong.vsh  raytracing.cl  raytracing.cpp  rt_common.h  rt_definition.h  rt_structure.h  standard.fsh  standard.vsh
lib/util/: shader.cpp  texture.cpp
src/: appmain.cpp  main.cpp  shader_utils.h
src/mesh/: common.h  geometry.hpp  material.hpp  mesh.cpp  mesh.hpp
src/scene3d/: scene.cpp
src/shader/: basic.fsh  basic.vsh  common.fsh  common.glsl
